# k230_sdk_ai_pose

./: README.md
ai_poc/: CMakeLists.txt  build_app_sub.sh
ai_poc/cmake/: Riscv64_glibc.cmake  link.lds
ai_poc/dual_cam_pose_offline/: CMakeLists.txt  keypoint_fifo_protocol.h  keypoint_fifo_reader.cc  main.cc  ov5647_calibration.c  ov5647_calibration.h  ov5647_matrix.yaml  pixel_to_ray.cc  pixel_to_ray.h  pixel_to_ray_calib.c  pixel_to_ray_calib.h  triangulation.cpp  triangulation.hpp
